@@ -7,6 +7,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 =head2 Changes in Devel::NYTProf 2.10 (svn rXXX) XXX
 
   Fixed call count for XSubs that was one too high.
+  Fixed enable_profile() after fork thanks to delamonpansie
+    http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
 
   Added nytprofcg utility to generate callgrind data for
     viewing via Kcachegrind, thanks to Chia-liang Kao.
